# testv1

./: .gitignore  LICENSE  README.md  architecture.md  bug.md  competet.md  currentbug.md  decibench.toml  decibench.toml.example  plan.md  prod.md  pyproject.toml  techimplemntation.md  versionmanagement.md
.github/workflows/: ci.yml  publish.yml
bridge_sidecar/: README.md  package.json  tsconfig.json
bridge_sidecar/browser/: audio-shared.js  retell.html  vapi.html
bridge_sidecar/src/: adapter.ts  log.ts  protocol.ts  server.ts
bridge_sidecar/src/adapters/: retell.ts  vapi.ts
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  api.ts  format.ts  main.ts  router.ts  styles.css
dashboard/src/components/: CopyButton.vue  ErrorBox.vue  SpanTimelineChart.vue  Spinner.vue
dashboard/src/views/: CallDetail.vue  EvaluationDetail.vue  FailureInbox.vue  RunDetail.vue  RunsList.vue
docs/: README.md  bridge-protocol.md  dashboard.md  exec-testing.md  import-and-evaluate.md  install.md  limitations.md  native-connectors.md  quickstart.md  replay-to-regression.md  support-matrix.yaml  websocket-testing.md
scenarios/core/acoustic/: fast-speaker-003.yaml  street-noise-001.yaml
scenarios/core/adversarial/: confusion-003.yaml
scenarios/core/quick/: fast-008.yaml  multiintent-007.yaml
scenarios/core/standard/: accent-013.yaml  interruption-014.yaml  multiturn-012.yaml
src/decibench/: __init__.py  config.py  llm_catalog.py  models.py  orchestrator.py  secrets.py
src/decibench/api/: app.py
src/decibench/audio/: __init__.py  analysis.py  noise.py  recorder.py  synthesizer.py  transcode.py
src/decibench/bridge/: __init__.py  client.py  protocol.py
src/decibench/cli/: __init__.py  _config_file.py  auth.py  bridge.py  compare.py  doctor.py  evaluate_cmd.py  import_cmd.py  init_cmd.py  models.py  replay.py  run.py  runs.py  scenario.py  serve.py  version.py
src/decibench/connectors/: __init__.py  _bridge_base.py  base.py  demo.py  http.py  process.py  registry.py  retell.py  vapi.py  websocket.py
src/decibench/evaluators/: __init__.py  base.py  compliance.py  hallucination.py  interruption.py  latency.py  mos.py  score.py  silence.py  stoi.py  task.py  wer.py
src/decibench/imports/: __init__.py  base.py  jsonl.py  registry.py  retell.py  vapi.py
src/decibench/providers/: __init__.py  registry.py
src/decibench/replay/: __init__.py  evaluate.py  scenario.py
src/decibench/reporters/: __init__.py  ci_reporter.py  html_reporter.py  json_reporter.py  junit.py  markdown_reporter.py  rich_reporter.py
src/decibench/scenarios/: __init__.py  loader.py
src/decibench/store/: __init__.py  migrations.py  privacy.py  sqlite.py
tests/: conftest.py  test_api.py  test_bridge.py  test_bridge_real_retell.py  test_bug_fixes.py  test_cli_ux.py  test_config.py  test_connectors_platform.py  test_docs_truth.py  test_evaluate_calls.py  test_imports_platform.py  test_integration.py  test_models.py  test_reporters_junit.py  test_store_import_replay.py  test_store_v2.py  test_ws_protocol.py
tests/fixtures/: echo_agent.py
tests/test_connectors/: test_demo.py
tests/test_evaluators/: test_compliance.py  test_hallucination.py  test_intelligibility.py  test_interruption.py  test_judge.py  test_latency.py  test_mos.py  test_score.py  test_silence.py  test_task_completion.py  test_wer.py
(+30 files in other folders)
